Fixed layout issues

--- a/src/assets/scss/components/_product-thumb.scss
+++ b/src/assets/scss/components/_product-thumb.scss
@@ -159,7 +159,7 @@
       h3 {
         margin-bottom: 0;
         a {
-          font-size: 17px;
+          font-size: 20px;
           font-weight: 400;
           line-height: 1.6;
 
